Added frontend endpoints and fixed backend errors
